<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/workout_page_background"
    tools:context=".MainActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/greeting"
        android:textColor="@color/black"
        android:textSize="33sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.549"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.118" />

    <Button
        android:id="@+id/pick_date_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/orange"
        android:text="@string/pick_date"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.004" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_workout"
        android:textColor="@color/grey"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.239" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="270dp"
        android:orientation="vertical"
        android:paddingHorizontal="5dp"
        android:shrinkColumns="*"
        android:stretchColumns="*"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.cardview.widget.CardView
            android:id="@+id/back_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:cardBackgroundColor="@color/blue"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            app:cardMaxElevation="5dp"
            app:cardPreventCornerOverlap="true">

            <ImageView
                android:id="@+id/back_img"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="start"
                android:layout_margin="0dp"
                android:src="@drawable/back_workout_foreground" />

            <TextView
                android:id="@+id/back_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/back"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/arms_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:cardBackgroundColor="@color/blue"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            app:cardMaxElevation="5dp"
            app:cardPreventCornerOverlap="true">

            <ImageView
                android:id="@+id/arm_img"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="start"
                android:layout_margin="0dp"
                android:src="@drawable/arm_workout_foreground" />

            <TextView
                android:id="@+id/arms_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/arms"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/legs_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:cardBackgroundColor="@color/blue"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            app:cardMaxElevation="5dp"
            app:cardPreventCornerOverlap="true">

            <ImageView
                android:id="@+id/leg_img"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="start"
                android:layout_margin="0dp"
                android:src="@drawable/leg_workout_foreground" />

            <TextView
                android:id="@+id/legs_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/legs"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/chest_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:cardBackgroundColor="@color/blue"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            app:cardMaxElevation="5dp"
            app:cardPreventCornerOverlap="true">

            <ImageView
                android:id="@+id/chest_img"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="start"
                android:layout_margin="0dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:src="@drawable/chest_workout_foreground" />

            <TextView
                android:id="@+id/chest_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/chest"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

