<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/workout_page_background"
    tools:context=".WorkoutPage">


    <TextView
        android:id="@+id/workout_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/workout_name"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.045" />

    <Button
        android:id="@+id/homeBtn"
        android:layout_width="89dp"
        android:layout_height="38dp"
        android:backgroundTint="@color/orange"
        android:text="@string/return_home"
        android:textAllCaps="false"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.012"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.005" />


    <androidx.cardview.widget.CardView
        android:layout_width="109dp"
        android:layout_height="52dp"
        android:layout_marginStart="152dp"
        android:layout_marginTop="100dp"
        android:gravity="center"
        app:cardBackgroundColor="@color/grey"
        app:cardCornerRadius="12dp"
        app:cardElevation="10dp"
        app:contentPadding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Chronometer
            android:id="@+id/timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/beingWorkoutBtn"
        android:layout_width="87dp"
        android:layout_height="37dp"
        android:background="@drawable/border"
        android:backgroundTint="@color/orange"
        android:text="@string/begin_btn"
        android:textAllCaps="true"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.152"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.234" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_elapsed"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.112" />

    <Button
        android:id="@+id/stop_button"
        android:layout_width="87dp"
        android:layout_height="37dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/border"
        android:text="@string/stop"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.864"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.234" />

    <EditText
        android:id="@+id/workout_1_id"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:hint="@string/workout_hint"
        android:inputType="text"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.359" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="290dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/number_of_sets_1_id"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:background="@android:drawable/editbox_background"
            android:backgroundTint="@color/orange"
            android:hint="@string/sets_hint"
            android:inputType="number"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.176"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.439" />


        <EditText
            android:id="@+id/number_of_reps_1_id"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:background="@android:drawable/editbox_background"
            android:backgroundTint="@color/orange"
            android:hint="@string/reps_hint"
            android:inputType="number"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.176"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.439" />

        <EditText
            android:id="@+id/weight_1_id"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:background="@android:drawable/editbox_background"
            android:backgroundTint="@color/orange"
            android:hint="@string/weight_hint"
            android:inputType="number"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.176"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.439" />
    </LinearLayout>


    <EditText
        android:id="@+id/workout_2_id"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:hint="@string/workout_hint"
        android:inputType="text"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.595" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="453dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/number_of_sets_2_id"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:background="@android:drawable/editbox_background"
            android:backgroundTint="@color/orange"
            android:hint="@string/sets_hint"
            android:inputType="number"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.176"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.439" />


        <EditText
            android:id="@+id/number_of_reps_2_id"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:background="@android:drawable/editbox_background"
            android:backgroundTint="@color/orange"
            android:hint="@string/reps_hint"
            android:inputType="number"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.176"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.439" />

        <EditText
            android:id="@+id/weight_2_id"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:background="@android:drawable/editbox_background"
            android:backgroundTint="@color/orange"
            android:hint="@string/weight_hint"
            android:inputType="number"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.176"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.439" />
    </LinearLayout>

    <EditText
        android:id="@+id/workout_3_id"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:hint="@string/workout_hint"
        android:textAlignment="center"
        android:inputType="text"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.831" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="615dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/number_of_sets_3_id"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:background="@android:drawable/editbox_background"
            android:backgroundTint="@color/orange"
            android:hint="@string/sets_hint"
            android:inputType="number"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.176"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.439" />


        <EditText
            android:id="@+id/number_of_reps_3_id"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:background="@android:drawable/editbox_background"
            android:backgroundTint="@color/orange"
            android:hint="@string/reps_hint"
            android:inputType="number"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.176"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.439" />

        <EditText
            android:id="@+id/weight_3_id"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:background="@android:drawable/editbox_background"
            android:backgroundTint="@color/orange"
            android:hint="@string/weight_hint"
            android:inputType="number"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.176"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.439" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>